202. - Se configura nuevo efectode particulas ImpactBlast, que se ejecutara cuando el proyectil entre en contacto - se usa mismo codigo de LaunchBlast para ImpactBlast, y se usa el mismo codigo OnHit de TankTrack para ejecutarlo.

--- a/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -71,8 +71,8 @@ PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 LastLevel=/Game/BattleGround
 
 [ModuleFileTracking]
-BattleTank.TimeStamp=2019.12.07-20.52.34
-BattleTank.LastCompileMethod=External
+BattleTank.TimeStamp=2019.12.08-00.09.43
+BattleTank.LastCompileMethod=Runtime
 PakFile.TimeStamp=2019.10.27-04.29.22
 PakFile.LastCompileMethod=Unknown
 RSA.TimeStamp=2019.10.27-04.30.03
@@ -764,28 +764,29 @@ DistCurveEditor.LastCompileMethod=Unknown
 CleanShutdown=False
 OpenAssetsAtExit=/Game/Projectile/Projectile_BP.Projectile_BP
 OpenAssetsAtExit=/Game/ImprovedTank/Tank_BP.Tank_BP
-OpenAssetsAtExit=/Game/StarterContent/Particles/P_Explosion.P_Explosion
+OpenAssetsAtExit=/Game/StarterContent/Particles/ImpactBlast.ImpactBlast
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=CompilerResultsLog
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Projectile/Projectile_BP
-MRUItem1=/Game/StarterContent/Particles/P_Explosion
+MRUItem0=/Game/StarterContent/Particles/ImpactBlast
+MRUItem1=/Game/Projectile/Projectile_BP
 MRUItem2=/Game/ImprovedTank/Tank_BP
-MRUItem3=/Game/PlayerUI
-MRUItem4=/Game/ImprovedMortar/improvedMortar_BP
-MRUItem5=/Game/Mortar/Mortar_BP
-MRUItem6=/Game/FlatLand
-MRUItem7=/Game/ImprovedMortar/mortar_barrel
-MRUItem8=/Game/ImprovedMortar/mortar_dome
-MRUItem9=/Game/ImprovedMortar/mortar_body
-MRUItem10=/Game/Mortar/mortar_barrel
-MRUItem11=/Game/Mortar/mortar_dome
-MRUItem12=/Game/Mortar/mortar_body
-MRUItem13=/Game/ImprovedTank/TankAIController_BP
-MRUItem14=/Game/TankAIController_BP
-MRUItem15=/Game/TankPlayerController_BP
+MRUItem3=/Game/StarterContent/Particles/P_Explosion
+MRUItem4=/Game/PlayerUI
+MRUItem5=/Game/ImprovedMortar/improvedMortar_BP
+MRUItem6=/Game/Mortar/Mortar_BP
+MRUItem7=/Game/FlatLand
+MRUItem8=/Game/ImprovedMortar/mortar_barrel
+MRUItem9=/Game/ImprovedMortar/mortar_dome
+MRUItem10=/Game/ImprovedMortar/mortar_body
+MRUItem11=/Game/Mortar/mortar_barrel
+MRUItem12=/Game/Mortar/mortar_dome
+MRUItem13=/Game/Mortar/mortar_body
+MRUItem14=/Game/ImprovedTank/TankAIController_BP
+MRUItem15=/Game/TankAIController_BP
+MRUItem16=/Game/TankPlayerController_BP
 
 [DetailCategories]
 Tank_BP_C.Tick=True
@@ -1533,6 +1534,29 @@ ParticleModuleColorOverLife.Color=True
 ParticleModuleColorOverLife.Cascade=True
 ParticleModuleSize.Size=True
 ParticleModuleSize.Cascade=True
+ParticleModuleTypeDataGpu.ParticleModuleTypeDataGpu=True
+ParticleModuleTypeDataGpu.Cascade=True
+REINST_Projectile_BP_C_34.Variable=True
+REINST_Projectile_BP_C_34.TransformCommon=True
+REINST_Projectile_BP_C_34.Sockets=True
+REINST_Projectile_BP_C_34.Particles=True
+REINST_Projectile_BP_C_34.EmitterActions=True
+REINST_Projectile_BP_C_34.Materials=True
+REINST_Projectile_BP_C_34.Attachment=True
+REINST_Projectile_BP_C_34.Lighting=True
+REINST_Projectile_BP_C_34.Rendering=True
+REINST_Projectile_BP_C_34.VirtualTexture=True
+REINST_Projectile_BP_C_34.LOD=True
+REINST_Projectile_BP_C_34.Tags=True
+REINST_Projectile_BP_C_34.ComponentReplication=True
+REINST_Projectile_BP_C_34.Activation=True
+REINST_Projectile_BP_C_34.Cooking=True
+REINST_Projectile_BP_C_34.Events=True
+REINST_Projectile_BP_C_38.Particles=True
+REINST_Projectile_BP_C_38.EmitterActions=True
+REINST_Projectile_BP_C_38.Attachment=True
+REINST_Projectile_BP_C_38.LOD=True
+REINST_Projectile_BP_C_38.Activation=True
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
@@ -1655,7 +1679,7 @@ LightmassImportanceVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettin
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
-Object="\"Object.Size.StartSize\" \"Object.Size.StartSize.Distribution\" "
+Object=
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 TextBlock="\"Object.Appearance.Font\" "
