203. se configura nueva variable para alamcenar la fuerza de la explosion cuando el proyectil entra en contacto.

--- a/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -71,7 +71,7 @@ PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 LastLevel=/Game/BattleGround
 
 [ModuleFileTracking]
-BattleTank.TimeStamp=2019.12.08-00.09.43
+BattleTank.TimeStamp=2019.12.08-19.17.09
 BattleTank.LastCompileMethod=Runtime
 PakFile.TimeStamp=2019.10.27-04.29.22
 PakFile.LastCompileMethod=Unknown
@@ -764,21 +764,21 @@ DistCurveEditor.LastCompileMethod=Unknown
 CleanShutdown=False
 OpenAssetsAtExit=/Game/Projectile/Projectile_BP.Projectile_BP
 OpenAssetsAtExit=/Game/ImprovedTank/Tank_BP.Tank_BP
-OpenAssetsAtExit=/Game/StarterContent/Particles/ImpactBlast.ImpactBlast
+OpenAssetsAtExit=/Game/ImprovedMortar/improvedMortar_BP.improvedMortar_BP
 
 [MessageLog]
 LastLogListing=CompilerResultsLog
 
 [ContentBrowserRecent]
-MRUItem0=/Game/StarterContent/Particles/ImpactBlast
-MRUItem1=/Game/Projectile/Projectile_BP
-MRUItem2=/Game/ImprovedTank/Tank_BP
-MRUItem3=/Game/StarterContent/Particles/P_Explosion
-MRUItem4=/Game/PlayerUI
-MRUItem5=/Game/ImprovedMortar/improvedMortar_BP
-MRUItem6=/Game/Mortar/Mortar_BP
-MRUItem7=/Game/FlatLand
-MRUItem8=/Game/ImprovedMortar/mortar_barrel
+MRUItem0=/Game/Projectile/Projectile_BP
+MRUItem1=/Game/ImprovedMortar/mortar_barrel
+MRUItem2=/Game/ImprovedMortar/improvedMortar_BP
+MRUItem3=/Game/ImprovedTank/Tank_BP
+MRUItem4=/Game/StarterContent/Particles/ImpactBlast
+MRUItem5=/Game/StarterContent/Particles/P_Explosion
+MRUItem6=/Game/PlayerUI
+MRUItem7=/Game/Mortar/Mortar_BP
+MRUItem8=/Game/FlatLand
 MRUItem9=/Game/ImprovedMortar/mortar_dome
 MRUItem10=/Game/ImprovedMortar/mortar_body
 MRUItem11=/Game/Mortar/mortar_barrel
@@ -1557,6 +1557,131 @@ REINST_Projectile_BP_C_38.EmitterActions=True
 REINST_Projectile_BP_C_38.Attachment=True
 REINST_Projectile_BP_C_38.LOD=True
 REINST_Projectile_BP_C_38.Activation=True
+REINST_Projectile_BP_C_40.Tick=True
+REINST_Projectile_BP_C_40.Rendering=True
+REINST_Projectile_BP_C_40.Replication=True
+REINST_Projectile_BP_C_40.Input=True
+REINST_Projectile_BP_C_40.Actor=True
+Projectile_BP_C.RadialForceComponent=True
+Projectile_BP_C.Impulse=True
+Projectile_BP_C.Force=True
+Projectile_BP_C.Destructible=True
+REINST_Projectile_BP_C_48.Variable=True
+REINST_Projectile_BP_C_48.TransformCommon=True
+REINST_Projectile_BP_C_48.Sockets=True
+REINST_Projectile_BP_C_48.RadialForceComponent=True
+REINST_Projectile_BP_C_48.Impulse=True
+REINST_Projectile_BP_C_48.Force=True
+REINST_Projectile_BP_C_48.Destructible=True
+REINST_Projectile_BP_C_48.Rendering=True
+REINST_Projectile_BP_C_48.Tags=True
+REINST_Projectile_BP_C_48.ComponentReplication=True
+REINST_Projectile_BP_C_48.Activation=True
+REINST_Projectile_BP_C_48.Cooking=True
+REINST_Projectile_BP_C_48.Events=True
+REINST_Projectile_BP_C_74.Variable=True
+REINST_Projectile_BP_C_74.TransformCommon=True
+REINST_Projectile_BP_C_74.Sockets=True
+REINST_Projectile_BP_C_74.RadialForceComponent=True
+REINST_Projectile_BP_C_74.Impulse=True
+REINST_Projectile_BP_C_74.Force=True
+REINST_Projectile_BP_C_74.Destructible=True
+REINST_Projectile_BP_C_74.Rendering=True
+REINST_Projectile_BP_C_74.Tags=True
+REINST_Projectile_BP_C_74.ComponentReplication=True
+REINST_Projectile_BP_C_74.Activation=True
+REINST_Projectile_BP_C_74.Cooking=True
+REINST_Projectile_BP_C_74.Events=True
+REINST_Projectile_BP_C_86.Variable=True
+REINST_Projectile_BP_C_86.TransformCommon=True
+REINST_Projectile_BP_C_86.Sockets=True
+REINST_Projectile_BP_C_86.RadialForceComponent=True
+REINST_Projectile_BP_C_86.Impulse=True
+REINST_Projectile_BP_C_86.Force=True
+REINST_Projectile_BP_C_86.Destructible=True
+REINST_Projectile_BP_C_86.Rendering=True
+REINST_Projectile_BP_C_86.Tags=True
+REINST_Projectile_BP_C_86.ComponentReplication=True
+REINST_Projectile_BP_C_86.Activation=True
+REINST_Projectile_BP_C_86.Cooking=True
+REINST_Projectile_BP_C_86.Events=True
+REINST_Projectile_BP_C_98.Variable=True
+REINST_Projectile_BP_C_98.TransformCommon=True
+REINST_Projectile_BP_C_98.Sockets=True
+REINST_Projectile_BP_C_98.RadialForceComponent=True
+REINST_Projectile_BP_C_98.Impulse=True
+REINST_Projectile_BP_C_98.Force=True
+REINST_Projectile_BP_C_98.Destructible=True
+REINST_Projectile_BP_C_98.Rendering=True
+REINST_Projectile_BP_C_98.Tags=True
+REINST_Projectile_BP_C_98.ComponentReplication=True
+REINST_Projectile_BP_C_98.Activation=True
+REINST_Projectile_BP_C_98.Cooking=True
+REINST_Projectile_BP_C_98.Events=True
+REINST_Projectile_BP_C_40.Variable=True
+REINST_Projectile_BP_C_40.TransformCommon=True
+REINST_Projectile_BP_C_40.Sockets=True
+REINST_Projectile_BP_C_40.RadialForceComponent=True
+REINST_Projectile_BP_C_40.Impulse=True
+REINST_Projectile_BP_C_40.Force=True
+REINST_Projectile_BP_C_40.Destructible=True
+REINST_Projectile_BP_C_40.Tags=True
+REINST_Projectile_BP_C_40.ComponentReplication=True
+REINST_Projectile_BP_C_40.Activation=True
+REINST_Projectile_BP_C_40.Cooking=True
+REINST_Projectile_BP_C_40.Events=True
+REINST_Projectile_BP_C_44.Variable=True
+REINST_Projectile_BP_C_44.TransformCommon=True
+REINST_Projectile_BP_C_44.Sockets=True
+REINST_Projectile_BP_C_44.RadialForceComponent=True
+REINST_Projectile_BP_C_44.Impulse=True
+REINST_Projectile_BP_C_44.Force=True
+REINST_Projectile_BP_C_44.Destructible=True
+REINST_Projectile_BP_C_44.Rendering=True
+REINST_Projectile_BP_C_44.Tags=True
+REINST_Projectile_BP_C_44.ComponentReplication=True
+REINST_Projectile_BP_C_44.Activation=True
+REINST_Projectile_BP_C_44.Cooking=True
+REINST_Projectile_BP_C_44.Events=True
+REINST_Projectile_BP_C_52.Variable=True
+REINST_Projectile_BP_C_52.TransformCommon=True
+REINST_Projectile_BP_C_52.Sockets=True
+REINST_Projectile_BP_C_52.RadialForceComponent=True
+REINST_Projectile_BP_C_52.Impulse=True
+REINST_Projectile_BP_C_52.Force=True
+REINST_Projectile_BP_C_52.Destructible=True
+REINST_Projectile_BP_C_52.Rendering=True
+REINST_Projectile_BP_C_52.Tags=True
+REINST_Projectile_BP_C_52.ComponentReplication=True
+REINST_Projectile_BP_C_52.Activation=True
+REINST_Projectile_BP_C_52.Cooking=True
+REINST_Projectile_BP_C_52.Events=True
+REINST_Projectile_BP_C_56.Variable=True
+REINST_Projectile_BP_C_56.TransformCommon=True
+REINST_Projectile_BP_C_56.Sockets=True
+REINST_Projectile_BP_C_56.RadialForceComponent=True
+REINST_Projectile_BP_C_56.Impulse=True
+REINST_Projectile_BP_C_56.Force=True
+REINST_Projectile_BP_C_56.Destructible=True
+REINST_Projectile_BP_C_56.Rendering=True
+REINST_Projectile_BP_C_56.Tags=True
+REINST_Projectile_BP_C_56.ComponentReplication=True
+REINST_Projectile_BP_C_56.Activation=True
+REINST_Projectile_BP_C_56.Cooking=True
+REINST_Projectile_BP_C_56.Events=True
+REINST_Projectile_BP_C_60.Variable=True
+REINST_Projectile_BP_C_60.TransformCommon=True
+REINST_Projectile_BP_C_60.Sockets=True
+REINST_Projectile_BP_C_60.RadialForceComponent=True
+REINST_Projectile_BP_C_60.Impulse=True
+REINST_Projectile_BP_C_60.Force=True
+REINST_Projectile_BP_C_60.Destructible=True
+REINST_Projectile_BP_C_60.Rendering=True
+REINST_Projectile_BP_C_60.Tags=True
+REINST_Projectile_BP_C_60.ComponentReplication=True
+REINST_Projectile_BP_C_60.Activation=True
+REINST_Projectile_BP_C_60.Cooking=True
+REINST_Projectile_BP_C_60.Events=True
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
@@ -1779,11 +1904,12 @@ FrameNumberDisplayFormat=Seconds
 /Game/Mortar/Mortar_BP.Mortar_BP=0
 /Game/ImprovedMortar/improvedMortar_BP.improvedMortar_BP=0
 /Game/StarterContent/Particles/P_Explosion.P_Explosion=0
+/Game/StarterContent/Particles/ImpactBlast.ImpactBlast=1
 
 [PlacementMode]
+RecentlyPlaced=/Game/ImprovedTank/Tank_BP.Tank_BP;
 RecentlyPlaced=/Game/ImprovedMortar/improvedMortar_BP.improvedMortar_BP;
 RecentlyPlaced=/Game/Mortar/Mortar_BP.Mortar_BP;
-RecentlyPlaced=/Game/ImprovedTank/Tank_BP.Tank_BP;
 
 [DetailCustomWidgetExpansion]
 CryptoKeysSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Left Track Turn Left,InputSettings.Bindings.AxisMappings.Right Track Turn Right,InputSettings.Bindings.AxisMappings.Left Track Turn Right,InputSettings.Bindings.AxisMappings.Right Track Throttle Backward,InputSettings.Bindings.AxisMappings.Right Track Turn Left,
