204. se implementa tiempo de vida para los proyectiles, para que sean eliminados despues de un tiempo y no cause memory leak

--- a/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -71,7 +71,7 @@ PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 LastLevel=/Game/BattleGround
 
 [ModuleFileTracking]
-BattleTank.TimeStamp=2019.12.08-19.17.09
+BattleTank.TimeStamp=2019.12.08-19.59.38
 BattleTank.LastCompileMethod=Runtime
 PakFile.TimeStamp=2019.10.27-04.29.22
 PakFile.LastCompileMethod=Unknown
@@ -771,9 +771,9 @@ LastLogListing=CompilerResultsLog
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Projectile/Projectile_BP
-MRUItem1=/Game/ImprovedMortar/mortar_barrel
-MRUItem2=/Game/ImprovedMortar/improvedMortar_BP
-MRUItem3=/Game/ImprovedTank/Tank_BP
+MRUItem1=/Game/ImprovedMortar/improvedMortar_BP
+MRUItem2=/Game/ImprovedTank/Tank_BP
+MRUItem3=/Game/ImprovedMortar/mortar_barrel
 MRUItem4=/Game/StarterContent/Particles/ImpactBlast
 MRUItem5=/Game/StarterContent/Particles/P_Explosion
 MRUItem6=/Game/PlayerUI
@@ -1682,6 +1682,20 @@ REINST_Projectile_BP_C_60.ComponentReplication=True
 REINST_Projectile_BP_C_60.Activation=True
 REINST_Projectile_BP_C_60.Cooking=True
 REINST_Projectile_BP_C_60.Events=True
+REINST_Projectile_BP_C_64.Variable=True
+REINST_Projectile_BP_C_64.TransformCommon=True
+REINST_Projectile_BP_C_64.Sockets=True
+REINST_Projectile_BP_C_64.RadialForceComponent=True
+REINST_Projectile_BP_C_64.Impulse=True
+REINST_Projectile_BP_C_64.Force=True
+REINST_Projectile_BP_C_64.Destructible=True
+REINST_Projectile_BP_C_64.Rendering=True
+REINST_Projectile_BP_C_64.Tags=True
+REINST_Projectile_BP_C_64.ComponentReplication=True
+REINST_Projectile_BP_C_64.Activation=True
+REINST_Projectile_BP_C_64.Cooking=True
+REINST_Projectile_BP_C_64.Events=True
+Projectile_BP_C.Setup=True
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
