205. Se agrega codigo para que los proyectils hagan daño y el tanque reciba daño

--- a/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -71,7 +71,7 @@ PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 LastLevel=/Game/BattleGround
 
 [ModuleFileTracking]
-BattleTank.TimeStamp=2019.12.08-19.59.38
+BattleTank.TimeStamp=2019.12.08-21.13.15
 BattleTank.LastCompileMethod=Runtime
 PakFile.TimeStamp=2019.10.27-04.29.22
 PakFile.LastCompileMethod=Unknown
@@ -764,29 +764,31 @@ DistCurveEditor.LastCompileMethod=Unknown
 CleanShutdown=False
 OpenAssetsAtExit=/Game/Projectile/Projectile_BP.Projectile_BP
 OpenAssetsAtExit=/Game/ImprovedTank/Tank_BP.Tank_BP
-OpenAssetsAtExit=/Game/ImprovedMortar/improvedMortar_BP.improvedMortar_BP
+OpenAssetsAtExit=/Game/StarterContent/Particles/LaunchBlast.LaunchBlast
 
 [MessageLog]
 LastLogListing=CompilerResultsLog
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Projectile/Projectile_BP
-MRUItem1=/Game/ImprovedMortar/improvedMortar_BP
-MRUItem2=/Game/ImprovedTank/Tank_BP
-MRUItem3=/Game/ImprovedMortar/mortar_barrel
-MRUItem4=/Game/StarterContent/Particles/ImpactBlast
-MRUItem5=/Game/StarterContent/Particles/P_Explosion
-MRUItem6=/Game/PlayerUI
-MRUItem7=/Game/Mortar/Mortar_BP
-MRUItem8=/Game/FlatLand
-MRUItem9=/Game/ImprovedMortar/mortar_dome
-MRUItem10=/Game/ImprovedMortar/mortar_body
-MRUItem11=/Game/Mortar/mortar_barrel
-MRUItem12=/Game/Mortar/mortar_dome
-MRUItem13=/Game/Mortar/mortar_body
-MRUItem14=/Game/ImprovedTank/TankAIController_BP
-MRUItem15=/Game/TankAIController_BP
-MRUItem16=/Game/TankPlayerController_BP
+MRUItem0=/Game/StarterContent/Particles/LaunchBlast
+MRUItem1=/Game/Projectile/Projectile_BP
+MRUItem2=/Game/ImprovedMortar/improvedMortar_BP
+MRUItem3=/Game/ImprovedTank/Tank_BP
+MRUItem4=/Game/Projectile/Shape_Sphere
+MRUItem5=/Game/ImprovedMortar/mortar_barrel
+MRUItem6=/Game/StarterContent/Particles/ImpactBlast
+MRUItem7=/Game/StarterContent/Particles/P_Explosion
+MRUItem8=/Game/PlayerUI
+MRUItem9=/Game/Mortar/Mortar_BP
+MRUItem10=/Game/FlatLand
+MRUItem11=/Game/ImprovedMortar/mortar_dome
+MRUItem12=/Game/ImprovedMortar/mortar_body
+MRUItem13=/Game/Mortar/mortar_barrel
+MRUItem14=/Game/Mortar/mortar_dome
+MRUItem15=/Game/Mortar/mortar_body
+MRUItem16=/Game/ImprovedTank/TankAIController_BP
+MRUItem17=/Game/TankAIController_BP
+MRUItem18=/Game/TankPlayerController_BP
 
 [DetailCategories]
 Tank_BP_C.Tick=True
@@ -800,7 +802,7 @@ Tank_BP_C.Actor=True
 TankAimingComponent.Variable=True
 TankAimingComponent.Sockets=True
 TankAimingComponent.Firing=True
-TankAimingComponent.Tags=True
+TankAimingComponent.Tags=False
 TankAimingComponent.ComponentReplication=True
 TankAimingComponent.Activation=True
 TankAimingComponent.Cooking=True
@@ -1696,6 +1698,20 @@ REINST_Projectile_BP_C_64.Activation=True
 REINST_Projectile_BP_C_64.Cooking=True
 REINST_Projectile_BP_C_64.Events=True
 Projectile_BP_C.Setup=True
+REINST_Projectile_BP_C_52.StaticMesh=True
+REINST_Projectile_BP_C_52.Materials=True
+REINST_Projectile_BP_C_52.Physics=True
+REINST_Projectile_BP_C_52.Collision=True
+REINST_Projectile_BP_C_52.Lighting=True
+REINST_Projectile_BP_C_52.VirtualTexture=True
+REINST_Projectile_BP_C_56.StaticMesh=True
+REINST_Projectile_BP_C_56.Materials=True
+REINST_Projectile_BP_C_56.Physics=True
+REINST_Projectile_BP_C_56.Collision=True
+REINST_Projectile_BP_C_56.Lighting=True
+REINST_Projectile_BP_C_56.VirtualTexture=True
+Tank_BP_C.Setup=True
+Tank_BP_C.Health=True
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
@@ -1827,9 +1843,9 @@ Widget=
 Visual=
 ParticleModuleLifetime="\"Object.Lifetime.Lifetime\" \"Object.Lifetime.Lifetime.Distribution\" "
 ParticleModuleLifetimeBase="\"Object.Lifetime.Lifetime\" \"Object.Lifetime.Lifetime.Distribution\" "
-ParticleModule="\"Object.Size.StartSize\" \"Object.Size.StartSize.Distribution\" "
-ParticleModuleSpawn="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstScale.Distribution\" "
-ParticleModuleSpawnBase="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstScale.Distribution\" "
+ParticleModule="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstScale.Distribution\" "
+ParticleModuleSpawn="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstScale.Distribution\" "
+ParticleModuleSpawnBase="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstScale.Distribution\" "
 ParticleModuleColorOverLife="\"Object.Color.ColorOverLife\" \"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution\" "
 ParticleModuleColorBase="\"Object.Color.ColorOverLife\" \"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution\" "
 ParticleModuleSize="\"Object.Size.StartSize\" \"Object.Size.StartSize.Distribution\" "
@@ -1919,6 +1935,7 @@ FrameNumberDisplayFormat=Seconds
 /Game/ImprovedMortar/improvedMortar_BP.improvedMortar_BP=0
 /Game/StarterContent/Particles/P_Explosion.P_Explosion=0
 /Game/StarterContent/Particles/ImpactBlast.ImpactBlast=1
+/Game/Projectile/Shape_Sphere.Shape_Sphere=0
 
 [PlacementMode]
 RecentlyPlaced=/Game/ImprovedTank/Tank_BP.Tank_BP;
