206. se agrega HealthBar al tanque, que mostrara visualmente la vida del tanque.

--- a/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -71,7 +71,7 @@ PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 LastLevel=/Game/BattleGround
 
 [ModuleFileTracking]
-BattleTank.TimeStamp=2019.12.08-21.13.15
+BattleTank.TimeStamp=2019.12.14-17.33.49
 BattleTank.LastCompileMethod=Runtime
 PakFile.TimeStamp=2019.10.27-04.29.22
 PakFile.LastCompileMethod=Unknown
@@ -762,33 +762,33 @@ DistCurveEditor.LastCompileMethod=Unknown
 
 [AssetEditorManager]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/Projectile/Projectile_BP.Projectile_BP
 OpenAssetsAtExit=/Game/ImprovedTank/Tank_BP.Tank_BP
-OpenAssetsAtExit=/Game/StarterContent/Particles/LaunchBlast.LaunchBlast
+OpenAssetsAtExit=/Game/ImprovedTank/HealthBar.HealthBar
 
 [MessageLog]
 LastLogListing=CompilerResultsLog
 
 [ContentBrowserRecent]
-MRUItem0=/Game/StarterContent/Particles/LaunchBlast
-MRUItem1=/Game/Projectile/Projectile_BP
-MRUItem2=/Game/ImprovedMortar/improvedMortar_BP
-MRUItem3=/Game/ImprovedTank/Tank_BP
-MRUItem4=/Game/Projectile/Shape_Sphere
-MRUItem5=/Game/ImprovedMortar/mortar_barrel
-MRUItem6=/Game/StarterContent/Particles/ImpactBlast
-MRUItem7=/Game/StarterContent/Particles/P_Explosion
-MRUItem8=/Game/PlayerUI
-MRUItem9=/Game/Mortar/Mortar_BP
-MRUItem10=/Game/FlatLand
-MRUItem11=/Game/ImprovedMortar/mortar_dome
-MRUItem12=/Game/ImprovedMortar/mortar_body
-MRUItem13=/Game/Mortar/mortar_barrel
-MRUItem14=/Game/Mortar/mortar_dome
-MRUItem15=/Game/Mortar/mortar_body
-MRUItem16=/Game/ImprovedTank/TankAIController_BP
-MRUItem17=/Game/TankAIController_BP
-MRUItem18=/Game/TankPlayerController_BP
+MRUItem0=/Game/ImprovedTank/HealthBar
+MRUItem1=/Game/ImprovedTank/Tank_BP
+MRUItem2=/Game/ImprovedTank/TankAIController_BP
+MRUItem3=/Game/StarterContent/Particles/LaunchBlast
+MRUItem4=/Game/Projectile/Projectile_BP
+MRUItem5=/Game/ImprovedMortar/improvedMortar_BP
+MRUItem6=/Game/Projectile/Shape_Sphere
+MRUItem7=/Game/ImprovedMortar/mortar_barrel
+MRUItem8=/Game/StarterContent/Particles/ImpactBlast
+MRUItem9=/Game/StarterContent/Particles/P_Explosion
+MRUItem10=/Game/PlayerUI
+MRUItem11=/Game/Mortar/Mortar_BP
+MRUItem12=/Game/FlatLand
+MRUItem13=/Game/ImprovedMortar/mortar_dome
+MRUItem14=/Game/ImprovedMortar/mortar_body
+MRUItem15=/Game/Mortar/mortar_barrel
+MRUItem16=/Game/Mortar/mortar_dome
+MRUItem17=/Game/Mortar/mortar_body
+MRUItem18=/Game/TankAIController_BP
+MRUItem19=/Game/TankPlayerController_BP
 
 [DetailCategories]
 Tank_BP_C.Tick=True
@@ -1712,6 +1712,58 @@ REINST_Projectile_BP_C_56.Lighting=True
 REINST_Projectile_BP_C_56.VirtualTexture=True
 Tank_BP_C.Setup=True
 Tank_BP_C.Health=True
+REINST_TankAIController_BP_C_34.Tick=True
+REINST_TankAIController_BP_C_34.Setup=True
+REINST_TankAIController_BP_C_34.AI=True
+REINST_TankAIController_BP_C_34.Controller=True
+REINST_TankAIController_BP_C_34.Rendering=True
+REINST_TankAIController_BP_C_34.Replication=True
+REINST_TankAIController_BP_C_34.Input=True
+REINST_TankAIController_BP_C_34.Actor=True
+WidgetComponent.Variable=True
+WidgetComponent.TransformCommon=True
+WidgetComponent.Sockets=True
+WidgetComponent.Materials=True
+WidgetComponent.UserInterface=True
+WidgetComponent.Interaction=True
+WidgetComponent.Animation=True
+WidgetComponent.Layers=True
+WidgetComponent.Physics=True
+WidgetComponent.Collision=True
+WidgetComponent.Rendering=True
+WidgetComponent.VirtualTexture=True
+WidgetComponent.Tags=True
+WidgetComponent.ComponentReplication=True
+WidgetComponent.Cooking=True
+WidgetComponent.Events=True
+ProgressBar.Layout=True
+ProgressBar.Style=True
+ProgressBar.Progress=True
+ProgressBar.Accessibility=True
+ProgressBar.Appearance=True
+ProgressBar.Behavior=True
+ProgressBar.Render Transform=True
+ProgressBar.Performance=True
+ProgressBar.Clipping=True
+ProgressBar.Navigation=True
+ProgressBar.Localization=True
+HealthBar_C.Appearance=True
+HealthBar_C.Designer=True
+HealthBar_C.Input=True
+HealthBar_C.Interaction=True
+HealthBar_C.Performance=True
+HealthBar_C.Layout=True
+HealthBar_C.Behavior=True
+HealthBar_C.Render Transform=True
+HealthBar_C.Accessibility=True
+HealthBar_C.Clipping=True
+HealthBar_C.Navigation=True
+HealthBar_C.Localization=True
+BoolProperty.Variable=True
+BoolProperty.DefaultValueCategory=True
+K2Node_CallFunction.Graph=True
+K2Node_CallFunction.Inputs=True
+K2Node_CallFunction.Outputs=True
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
@@ -1936,6 +1988,8 @@ FrameNumberDisplayFormat=Seconds
 /Game/StarterContent/Particles/P_Explosion.P_Explosion=0
 /Game/StarterContent/Particles/ImpactBlast.ImpactBlast=1
 /Game/Projectile/Shape_Sphere.Shape_Sphere=0
+/Game/StarterContent/Particles/LaunchBlast.LaunchBlast=1
+/Game/Projectile/Projectile_BP.Projectile_BP=0
 
 [PlacementMode]
 RecentlyPlaced=/Game/ImprovedTank/Tank_BP.Tank_BP;
