--- a/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -71,7 +71,7 @@ PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 LastLevel=/Game/BattleGround
 
 [ModuleFileTracking]
-BattleTank.TimeStamp=2019.12.14-17.33.49
+BattleTank.TimeStamp=2019.12.14-20.18.36
 BattleTank.LastCompileMethod=Runtime
 PakFile.TimeStamp=2019.10.27-04.29.22
 PakFile.LastCompileMethod=Unknown
@@ -763,7 +763,6 @@ DistCurveEditor.LastCompileMethod=Unknown
 [AssetEditorManager]
 CleanShutdown=False
 OpenAssetsAtExit=/Game/ImprovedTank/Tank_BP.Tank_BP
-OpenAssetsAtExit=/Game/ImprovedTank/HealthBar.HealthBar
 
 [MessageLog]
 LastLogListing=CompilerResultsLog
@@ -1891,8 +1890,8 @@ CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
-Widget=
-Visual=
+Widget="\"Object.Appearance.FillColorAndOpacity\" "
+Visual="\"Object.Appearance.FillColorAndOpacity\" "
 ParticleModuleLifetime="\"Object.Lifetime.Lifetime\" \"Object.Lifetime.Lifetime.Distribution\" "
 ParticleModuleLifetimeBase="\"Object.Lifetime.Lifetime\" \"Object.Lifetime.Lifetime.Distribution\" "
 ParticleModule="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstScale.Distribution\" "
@@ -1902,6 +1901,7 @@ ParticleModuleColorOverLife="\"Object.Color.ColorOverLife\" \"Object.Color.Color
 ParticleModuleColorBase="\"Object.Color.ColorOverLife\" \"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution\" "
 ParticleModuleSize="\"Object.Size.StartSize\" \"Object.Size.StartSize.Distribution\" "
 ParticleModuleSizeBase="\"Object.Size.StartSize\" \"Object.Size.StartSize.Distribution\" "
+ProgressBar="\"Object.Appearance.FillColorAndOpacity\" "
 
 [WidgetTemplatesExpanded]
 Editor=False
@@ -1990,6 +1990,7 @@ FrameNumberDisplayFormat=Seconds
 /Game/Projectile/Shape_Sphere.Shape_Sphere=0
 /Game/StarterContent/Particles/LaunchBlast.LaunchBlast=1
 /Game/Projectile/Projectile_BP.Projectile_BP=0
+/Game/ImprovedTank/HealthBar.HealthBar=0
 
 [PlacementMode]
 RecentlyPlaced=/Game/ImprovedTank/Tank_BP.Tank_BP;
