208. se soluciona bug en HealthBar, que no actualizaba segun el valor ingresado en Blueprint, y se implementa Delegate al TankPlayerController. al activarse OnDeath pasa a StartSpectingOnly

--- a/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -71,7 +71,7 @@ PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 LastLevel=/Game/BattleGround
 
 [ModuleFileTracking]
-BattleTank.TimeStamp=2019.12.14-20.18.36
+BattleTank.TimeStamp=2019.12.14-21.33.24
 BattleTank.LastCompileMethod=Runtime
 PakFile.TimeStamp=2019.10.27-04.29.22
 PakFile.LastCompileMethod=Unknown
@@ -1763,6 +1763,26 @@ BoolProperty.DefaultValueCategory=True
 K2Node_CallFunction.Graph=True
 K2Node_CallFunction.Inputs=True
 K2Node_CallFunction.Outputs=True
+NavMeshBoundsVolume.TransformCommon=True
+NavMeshBoundsVolume.Navigation=True
+NavMeshBoundsVolume.Collision=True
+NavMeshBoundsVolume.VirtualTexture=True
+NavMeshBoundsVolume.Tags=True
+NavMeshBoundsVolume.Cooking=True
+NavMeshBoundsVolume.BrushSettings=True
+NavMeshBoundsVolume.Replication=True
+NavMeshBoundsVolume.Actor=True
+LandscapeEditorObject.LandscapeEditor=True
+LandscapeEditorObject.Tool Settings=True
+LandscapeEditorObject.Brush Settings=True
+LandscapeEditorObject.Target Layers=True
+LandscapeGizmoActiveActor.TransformCommon=True
+LandscapeGizmoActiveActor.LandscapeGizmoActiveActor=True
+LandscapeGizmoActiveActor.Gizmo=True
+LandscapeGizmoActiveActor.Rendering=True
+LandscapeGizmoActiveActor.Replication=True
+LandscapeGizmoActiveActor.Input=True
+LandscapeGizmoActiveActor.Actor=True
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
@@ -1902,6 +1922,7 @@ ParticleModuleColorBase="\"Object.Color.ColorOverLife\" \"Object.Color.ColorOver
 ParticleModuleSize="\"Object.Size.StartSize\" \"Object.Size.StartSize.Distribution\" "
 ParticleModuleSizeBase="\"Object.Size.StartSize\" \"Object.Size.StartSize.Distribution\" "
 ProgressBar="\"Object.Appearance.FillColorAndOpacity\" "
+NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [WidgetTemplatesExpanded]
 Editor=False
@@ -2063,6 +2084,7 @@ TcpMessagingSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.
 UdpMessagingSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Left Track Turn Left,InputSettings.Bindings.AxisMappings.Right Track Turn Right,InputSettings.Bindings.AxisMappings.Left Track Turn Right,InputSettings.Bindings.AxisMappings.Right Track Throttle Backward,InputSettings.Bindings.AxisMappings.Right Track Turn Left,
 WmfMediaSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Left Track Turn Left,InputSettings.Bindings.AxisMappings.Right Track Turn Right,InputSettings.Bindings.AxisMappings.Left Track Turn Right,InputSettings.Bindings.AxisMappings.Right Track Throttle Backward,InputSettings.Bindings.AxisMappings.Right Track Turn Left,
 ParticleModuleColorOverLife=ParticleModuleColorOverLife.Color.Distribution,ParticleModuleColorOverLife.Color.ConstantCurve,ParticleModuleColorOverLife.Color.Points,
+LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
@@ -2231,5 +2253,23 @@ LightDir=P=-44.999969 Y=-179.999969 R=0.000000
 
 [DetailCategoriesAdvanced]
 ParticleSpriteEmitter.Particle=True
+
+[LandscapeEdit]
+AlphaBrushAutoRotate=True
+WorldSpacePatternBrushSettings.Origin=X=0.000 Y=0.000
+WorldSpacePatternBrushSettings.bCenterTextureOnOrigin=False
+WorldSpacePatternBrushSettings.RepeatSize=3200.000000
+bUseFlattenTarget=False
+FlattenTarget=0.000000
+TerraceSmooth=0.000100
+TerraceInterval=1.000000
+RampWidth=2000.000000
+RampSideFalloff=0.400000
+bCombinedLayersOperation=True
+SmoothFilterKernelSize=4
+MirrorOp=0
+NewLandscapeMaterialName=
+ImportLandscape_AlphamapType=0
+ShowUnusedLayers=True
 
 
