--- a/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -71,7 +71,7 @@ PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 LastLevel=/Game/BattleGround
 
 [ModuleFileTracking]
-BattleTank.TimeStamp=2019.12.21-18.25.29
+BattleTank.TimeStamp=2019.12.21-20.34.38
 BattleTank.LastCompileMethod=Runtime
 PakFile.TimeStamp=2019.10.27-04.29.22
 PakFile.LastCompileMethod=Unknown
@@ -764,7 +764,6 @@ StaticMeshEditor.LastCompileMethod=Unknown
 
 [AssetEditorManager]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/Experiments/ConstraintTest.ConstraintTest
 OpenAssetsAtExit=/Game/ImprovedTank/SprungWheel_BP.SprungWheel_BP
 OpenAssetsAtExit=/Game/ImprovedTank/Tank_BP.Tank_BP
 
@@ -772,8 +771,8 @@ OpenAssetsAtExit=/Game/ImprovedTank/Tank_BP.Tank_BP
 LastLogListing=CompilerResultsLog
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ImprovedTank/Tank_BP
-MRUItem1=/Game/ImprovedTank/SprungWheel_BP
+MRUItem0=/Game/ImprovedTank/SprungWheel_BP
+MRUItem1=/Game/ImprovedTank/Tank_BP
 MRUItem2=/Game/Experiments/ConstraintTest
 MRUItem3=/Game/MyBattleTankGameModeBase_BP
 MRUItem4=/Game/SpringTestBed
@@ -1936,6 +1935,21 @@ REINST_SprungWheel_BP_C_46.ComponentReplication=True
 REINST_SprungWheel_BP_C_46.AngularMotor=True
 REINST_SprungWheel_BP_C_46.Cooking=True
 REINST_SprungWheel_BP_C_46.Events=True
+REINST_SprungWheel_BP_C_50.Variable=True
+REINST_SprungWheel_BP_C_50.TransformCommon=True
+REINST_SprungWheel_BP_C_50.Sockets=True
+REINST_SprungWheel_BP_C_50.StaticMesh=True
+REINST_SprungWheel_BP_C_50.Materials=True
+REINST_SprungWheel_BP_C_50.Physics=True
+REINST_SprungWheel_BP_C_50.Collision=True
+REINST_SprungWheel_BP_C_50.Lighting=True
+REINST_SprungWheel_BP_C_50.Rendering=True
+REINST_SprungWheel_BP_C_50.VirtualTexture=True
+REINST_SprungWheel_BP_C_50.Tags=True
+REINST_SprungWheel_BP_C_50.ComponentReplication=True
+REINST_SprungWheel_BP_C_50.Cooking=True
+REINST_SprungWheel_BP_C_50.Events=True
+SprungWheel_BP_C.ComponentTick=True
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
@@ -1993,8 +2007,8 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 CurrentPosGridSize=1
 
 [MRU]
-MRUItem0=/Game/SpringTestBed
-MRUItem1=/Game/BattleGround
+MRUItem0=/Game/BattleGround
+MRUItem1=/Game/SpringTestBed
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=165.000
@@ -2027,7 +2041,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Experiments
+ContentBrowserTab1.SelectedPaths=/Classes_Game/BattleTank/Public
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -2060,7 +2074,7 @@ LightmassImportanceVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettin
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
-Object="\"Object.Constraint.ComponentName1\" \"Object.Constraint.ComponentName2\" "
+Object=
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 TextBlock="\"Object.Appearance.Font\" "
@@ -2080,8 +2094,8 @@ ProgressBar="\"Object.Appearance.FillColorAndOpacity\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[2]\" "
 PhysicsConstraintComponent="\"Object.Constraint.ComponentName1\" \"Object.Constraint.ComponentName2\" "
-SceneComponent="\"Object.Constraint.ComponentName1\" \"Object.Constraint.ComponentName2\" "
-ActorComponent="\"Object.Constraint.ComponentName1\" \"Object.Constraint.ComponentName2\" "
+SceneComponent=
+ActorComponent=
 SprungWheel_BP_C="\"Object.Components.MassWheelConstraint.Object.Constraint.ComponentName1\" \"Object.Components.MassWheelConstraint.Object.Constraint.ComponentName2\" "
 SprungWheel="\"Object.Components.MassWheelConstraint.Object.Constraint.ComponentName1\" \"Object.Components.MassWheelConstraint.Object.Constraint.ComponentName2\" "
 REINST_SprungWheel_BP_C_46="\"Object.Components.MassWheelConstraint.Object.Constraint.ComponentName1\" \"Object.Components.MassWheelConstraint.Object.Constraint.ComponentName2\" "
@@ -2180,7 +2194,8 @@ FrameNumberDisplayFormat=Seconds
 /Game/MortarRobert/Turret_fancy_export_scaled_barrel.Turret_fancy_export_scaled_barrel=0
 /Game/MortarRobert/MortarRobert_BP.MortarRobert_BP=0
 /Game/MyBattleTankGameModeBase_BP.MyBattleTankGameModeBase_BP=1
-/Game/Experiments/ConstraintTest.ConstraintTest=1
+/Game/Experiments/ConstraintTest.ConstraintTest=0
+/Game/ImprovedTank/SprungWheel_BP.SprungWheel_BP=0
 
 [PlacementMode]
 RecentlyPlaced=/Game/ImprovedTank/SprungWheel_BP.SprungWheel_BP;
