--- a/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BattleTank/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -71,7 +71,7 @@ PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 LastLevel=/Game/BattleGround
 
 [ModuleFileTracking]
-BattleTank.TimeStamp=2019.12.21-20.34.38
+BattleTank.TimeStamp=2019.12.21-21.24.34
 BattleTank.LastCompileMethod=Runtime
 PakFile.TimeStamp=2019.10.27-04.29.22
 PakFile.LastCompileMethod=Unknown
@@ -1950,6 +1950,189 @@ REINST_SprungWheel_BP_C_50.ComponentReplication=True
 REINST_SprungWheel_BP_C_50.Cooking=True
 REINST_SprungWheel_BP_C_50.Events=True
 SprungWheel_BP_C.ComponentTick=True
+SpawnPoint.Variable=True
+SpawnPoint.TransformCommon=True
+SpawnPoint.Sockets=True
+SpawnPoint.Setup=True
+SpawnPoint.Rendering=True
+SpawnPoint.Tags=True
+SpawnPoint.ComponentReplication=True
+SpawnPoint.Activation=True
+SpawnPoint.Cooking=True
+SpawnPoint.Events=True
+REINST_SprungWheel_BP_C_41.Tick=True
+REINST_SprungWheel_BP_C_41.Rendering=True
+REINST_SprungWheel_BP_C_41.Replication=True
+REINST_SprungWheel_BP_C_41.Input=True
+REINST_SprungWheel_BP_C_41.Actor=True
+REINST_SprungWheel_BP_C_57.Variable=True
+REINST_SprungWheel_BP_C_57.TransformCommon=True
+REINST_SprungWheel_BP_C_57.Sockets=True
+REINST_SprungWheel_BP_C_57.StaticMesh=True
+REINST_SprungWheel_BP_C_57.Materials=True
+REINST_SprungWheel_BP_C_57.Physics=True
+REINST_SprungWheel_BP_C_57.Collision=True
+REINST_SprungWheel_BP_C_57.Lighting=True
+REINST_SprungWheel_BP_C_57.Rendering=True
+REINST_SprungWheel_BP_C_57.VirtualTexture=True
+REINST_SprungWheel_BP_C_57.Tags=True
+REINST_SprungWheel_BP_C_57.ComponentReplication=True
+REINST_SprungWheel_BP_C_57.Cooking=True
+REINST_SprungWheel_BP_C_57.Events=True
+REINST_SprungWheel_BP_C_61.Variable=True
+REINST_SprungWheel_BP_C_61.TransformCommon=True
+REINST_SprungWheel_BP_C_61.Sockets=True
+REINST_SprungWheel_BP_C_61.StaticMesh=True
+REINST_SprungWheel_BP_C_61.Materials=True
+REINST_SprungWheel_BP_C_61.Physics=True
+REINST_SprungWheel_BP_C_61.Collision=True
+REINST_SprungWheel_BP_C_61.Lighting=True
+REINST_SprungWheel_BP_C_61.Rendering=True
+REINST_SprungWheel_BP_C_61.VirtualTexture=True
+REINST_SprungWheel_BP_C_61.Tags=True
+REINST_SprungWheel_BP_C_61.ComponentReplication=True
+REINST_SprungWheel_BP_C_61.Cooking=True
+REINST_SprungWheel_BP_C_61.Events=True
+REINST_SprungWheel_BP_C_65.Variable=True
+REINST_SprungWheel_BP_C_65.TransformCommon=True
+REINST_SprungWheel_BP_C_65.Sockets=True
+REINST_SprungWheel_BP_C_65.StaticMesh=True
+REINST_SprungWheel_BP_C_65.Materials=True
+REINST_SprungWheel_BP_C_65.Physics=True
+REINST_SprungWheel_BP_C_65.Collision=True
+REINST_SprungWheel_BP_C_65.Lighting=True
+REINST_SprungWheel_BP_C_65.Rendering=True
+REINST_SprungWheel_BP_C_65.VirtualTexture=True
+REINST_SprungWheel_BP_C_65.Tags=True
+REINST_SprungWheel_BP_C_65.ComponentReplication=True
+REINST_SprungWheel_BP_C_65.Cooking=True
+REINST_SprungWheel_BP_C_65.Events=True
+REINST_SprungWheel_BP_C_73.Variable=True
+REINST_SprungWheel_BP_C_73.TransformCommon=True
+REINST_SprungWheel_BP_C_73.Sockets=True
+REINST_SprungWheel_BP_C_73.Rendering=True
+REINST_SprungWheel_BP_C_73.Constraint=True
+REINST_SprungWheel_BP_C_73.Constraint Behavior=True
+REINST_SprungWheel_BP_C_73.Linear Limits=True
+REINST_SprungWheel_BP_C_73.Angular Limits=True
+REINST_SprungWheel_BP_C_73.Tags=True
+REINST_SprungWheel_BP_C_73.LinearMotor=True
+REINST_SprungWheel_BP_C_73.ComponentReplication=True
+REINST_SprungWheel_BP_C_73.AngularMotor=True
+REINST_SprungWheel_BP_C_73.Cooking=True
+REINST_SprungWheel_BP_C_73.Events=True
+REINST_SprungWheel_BP_C_77.Variable=True
+REINST_SprungWheel_BP_C_77.TransformCommon=True
+REINST_SprungWheel_BP_C_77.Sockets=True
+REINST_SprungWheel_BP_C_77.Rendering=True
+REINST_SprungWheel_BP_C_77.Constraint=True
+REINST_SprungWheel_BP_C_77.Constraint Behavior=True
+REINST_SprungWheel_BP_C_77.Linear Limits=True
+REINST_SprungWheel_BP_C_77.Angular Limits=True
+REINST_SprungWheel_BP_C_77.Tags=True
+REINST_SprungWheel_BP_C_77.LinearMotor=True
+REINST_SprungWheel_BP_C_77.ComponentReplication=True
+REINST_SprungWheel_BP_C_77.AngularMotor=True
+REINST_SprungWheel_BP_C_77.Cooking=True
+REINST_SprungWheel_BP_C_77.Events=True
+REINST_SprungWheel_BP_C_81.Variable=True
+REINST_SprungWheel_BP_C_81.TransformCommon=True
+REINST_SprungWheel_BP_C_81.Sockets=True
+REINST_SprungWheel_BP_C_81.StaticMesh=True
+REINST_SprungWheel_BP_C_81.Materials=True
+REINST_SprungWheel_BP_C_81.Physics=True
+REINST_SprungWheel_BP_C_81.Collision=True
+REINST_SprungWheel_BP_C_81.Lighting=True
+REINST_SprungWheel_BP_C_81.Rendering=True
+REINST_SprungWheel_BP_C_81.VirtualTexture=True
+REINST_SprungWheel_BP_C_81.Tags=True
+REINST_SprungWheel_BP_C_81.ComponentReplication=True
+REINST_SprungWheel_BP_C_81.Cooking=True
+REINST_SprungWheel_BP_C_81.Events=True
+REINST_SprungWheel_BP_C_89.Variable=True
+REINST_SprungWheel_BP_C_89.TransformCommon=True
+REINST_SprungWheel_BP_C_89.Sockets=True
+REINST_SprungWheel_BP_C_89.Rendering=True
+REINST_SprungWheel_BP_C_89.Constraint=True
+REINST_SprungWheel_BP_C_89.Constraint Behavior=True
+REINST_SprungWheel_BP_C_89.Linear Limits=True
+REINST_SprungWheel_BP_C_89.Angular Limits=True
+REINST_SprungWheel_BP_C_89.Tags=True
+REINST_SprungWheel_BP_C_89.LinearMotor=True
+REINST_SprungWheel_BP_C_89.ComponentReplication=True
+REINST_SprungWheel_BP_C_89.AngularMotor=True
+REINST_SprungWheel_BP_C_89.Cooking=True
+REINST_SprungWheel_BP_C_89.Events=True
+REINST_SprungWheel_BP_C_93.Variable=True
+REINST_SprungWheel_BP_C_93.TransformCommon=True
+REINST_SprungWheel_BP_C_93.Sockets=True
+REINST_SprungWheel_BP_C_93.Rendering=True
+REINST_SprungWheel_BP_C_93.Constraint=True
+REINST_SprungWheel_BP_C_93.Constraint Behavior=True
+REINST_SprungWheel_BP_C_93.Linear Limits=True
+REINST_SprungWheel_BP_C_93.Angular Limits=True
+REINST_SprungWheel_BP_C_93.Tags=True
+REINST_SprungWheel_BP_C_93.LinearMotor=True
+REINST_SprungWheel_BP_C_93.ComponentReplication=True
+REINST_SprungWheel_BP_C_93.AngularMotor=True
+REINST_SprungWheel_BP_C_93.Cooking=True
+REINST_SprungWheel_BP_C_93.Events=True
+REINST_SprungWheel_BP_C_97.Variable=True
+REINST_SprungWheel_BP_C_97.TransformCommon=True
+REINST_SprungWheel_BP_C_97.Sockets=True
+REINST_SprungWheel_BP_C_97.Rendering=True
+REINST_SprungWheel_BP_C_97.Constraint=True
+REINST_SprungWheel_BP_C_97.Constraint Behavior=True
+REINST_SprungWheel_BP_C_97.Linear Limits=True
+REINST_SprungWheel_BP_C_97.Angular Limits=True
+REINST_SprungWheel_BP_C_97.Tags=True
+REINST_SprungWheel_BP_C_97.LinearMotor=True
+REINST_SprungWheel_BP_C_97.ComponentReplication=True
+REINST_SprungWheel_BP_C_97.AngularMotor=True
+REINST_SprungWheel_BP_C_97.Cooking=True
+REINST_SprungWheel_BP_C_97.Events=True
+REINST_SprungWheel_BP_C_109.Variable=True
+REINST_SprungWheel_BP_C_109.TransformCommon=True
+REINST_SprungWheel_BP_C_109.Sockets=True
+REINST_SprungWheel_BP_C_109.Rendering=True
+REINST_SprungWheel_BP_C_109.Constraint=True
+REINST_SprungWheel_BP_C_109.Constraint Behavior=True
+REINST_SprungWheel_BP_C_109.Linear Limits=True
+REINST_SprungWheel_BP_C_109.Angular Limits=True
+REINST_SprungWheel_BP_C_109.Tags=True
+REINST_SprungWheel_BP_C_109.LinearMotor=True
+REINST_SprungWheel_BP_C_109.ComponentReplication=True
+REINST_SprungWheel_BP_C_109.AngularMotor=True
+REINST_SprungWheel_BP_C_109.Cooking=True
+REINST_SprungWheel_BP_C_109.Events=True
+REINST_SprungWheel_BP_C_113.Variable=True
+REINST_SprungWheel_BP_C_113.TransformCommon=True
+REINST_SprungWheel_BP_C_113.Sockets=True
+REINST_SprungWheel_BP_C_113.StaticMesh=True
+REINST_SprungWheel_BP_C_113.Materials=True
+REINST_SprungWheel_BP_C_113.Physics=True
+REINST_SprungWheel_BP_C_113.Collision=True
+REINST_SprungWheel_BP_C_113.Lighting=True
+REINST_SprungWheel_BP_C_113.Rendering=True
+REINST_SprungWheel_BP_C_113.VirtualTexture=True
+REINST_SprungWheel_BP_C_113.Tags=True
+REINST_SprungWheel_BP_C_113.ComponentReplication=True
+REINST_SprungWheel_BP_C_113.Cooking=True
+REINST_SprungWheel_BP_C_113.Events=True
+REINST_SprungWheel_BP_C_121.Variable=True
+REINST_SprungWheel_BP_C_121.TransformCommon=True
+REINST_SprungWheel_BP_C_121.Sockets=True
+REINST_SprungWheel_BP_C_121.StaticMesh=True
+REINST_SprungWheel_BP_C_121.Materials=True
+REINST_SprungWheel_BP_C_121.Physics=True
+REINST_SprungWheel_BP_C_121.Collision=True
+REINST_SprungWheel_BP_C_121.Lighting=True
+REINST_SprungWheel_BP_C_121.Rendering=True
+REINST_SprungWheel_BP_C_121.VirtualTexture=True
+REINST_SprungWheel_BP_C_121.Tags=True
+REINST_SprungWheel_BP_C_121.ComponentReplication=True
+REINST_SprungWheel_BP_C_121.Cooking=True
+REINST_SprungWheel_BP_C_121.Events=True
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
@@ -2041,7 +2224,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Classes_Game/BattleTank/Public
+ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -2100,6 +2283,24 @@ SprungWheel_BP_C="\"Object.Components.MassWheelConstraint.Object.Constraint.Comp
 SprungWheel="\"Object.Components.MassWheelConstraint.Object.Constraint.ComponentName1\" \"Object.Components.MassWheelConstraint.Object.Constraint.ComponentName2\" "
 REINST_SprungWheel_BP_C_46="\"Object.Components.MassWheelConstraint.Object.Constraint.ComponentName1\" \"Object.Components.MassWheelConstraint.Object.Constraint.ComponentName2\" "
 REINST_SprungWheel_BP_C_50="\"Object.Components.MassWheelConstraint.Object.Constraint.ComponentName1\" \"Object.Components.MassWheelConstraint.Object.Constraint.ComponentName2\" "
+REINST_SprungWheel_BP_C_53="\"Object.Components.MassWheelConstraint.Object.Constraint.ComponentName1\" \"Object.Components.MassWheelConstraint.Object.Constraint.ComponentName2\" "
+REINST_SprungWheel_BP_C_57="\"Object.Components.MassWheelConstraint.Object.Constraint.ComponentName1\" \"Object.Components.MassWheelConstraint.Object.Constraint.ComponentName2\" "
+REINST_SprungWheel_BP_C_61="\"Object.Components.MassWheelConstraint.Object.Constraint.ComponentName1\" \"Object.Components.MassWheelConstraint.Object.Constraint.ComponentName2\" "
+REINST_SprungWheel_BP_C_65="\"Object.Components.MassWheelConstraint.Object.Constraint.ComponentName1\" \"Object.Components.MassWheelConstraint.Object.Constraint.ComponentName2\" "
+REINST_SprungWheel_BP_C_73="\"Object.Components.MassWheelConstraint.Object.Constraint.ComponentName1\" \"Object.Components.MassWheelConstraint.Object.Constraint.ComponentName2\" "
+REINST_SprungWheel_BP_C_77="\"Object.Components.MassWheelConstraint.Object.Constraint.ComponentName1\" \"Object.Components.MassWheelConstraint.Object.Constraint.ComponentName2\" "
+REINST_SprungWheel_BP_C_81="\"Object.Components.MassWheelConstraint.Object.Constraint.ComponentName1\" \"Object.Components.MassWheelConstraint.Object.Constraint.ComponentName2\" "
+REINST_SprungWheel_BP_C_89="\"Object.Components.MassWheelConstraint.Object.Constraint.ComponentName1\" \"Object.Components.MassWheelConstraint.Object.Constraint.ComponentName2\" "
+REINST_SprungWheel_BP_C_93="\"Object.Components.MassWheelConstraint.Object.Constraint.ComponentName1\" \"Object.Components.MassWheelConstraint.Object.Constraint.ComponentName2\" "
+REINST_SprungWheel_BP_C_97="\"Object.Components.MassWheelConstraint.Object.Constraint.ComponentName1\" \"Object.Components.MassWheelConstraint.Object.Constraint.ComponentName2\" "
+TankTrack="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+REINST_SprungWheel_BP_C_109="\"Object.Components.MassWheelConstraint.Object.Constraint.ComponentName1\" \"Object.Components.MassWheelConstraint.Object.Constraint.ComponentName2\" "
+REINST_SprungWheel_BP_C_113="\"Object.Components.MassWheelConstraint.Object.Constraint.ComponentName1\" \"Object.Components.MassWheelConstraint.Object.Constraint.ComponentName2\" "
+REINST_SprungWheel_BP_C_121="\"Object.Components.MassWheelConstraint.Object.Constraint.ComponentName1\" \"Object.Components.MassWheelConstraint.Object.Constraint.ComponentName2\" "
+REINST_SprungWheel_BP_C_125="\"Object.Components.MassWheelConstraint.Object.Constraint.ComponentName1\" \"Object.Components.MassWheelConstraint.Object.Constraint.ComponentName2\" "
 
 [WidgetTemplatesExpanded]
 Editor=False
@@ -2198,12 +2399,12 @@ FrameNumberDisplayFormat=Seconds
 /Game/ImprovedTank/SprungWheel_BP.SprungWheel_BP=0
 
 [PlacementMode]
+RecentlyPlaced=/Game/ImprovedTank/Tank_BP.Tank_BP;
 RecentlyPlaced=/Game/ImprovedTank/SprungWheel_BP.SprungWheel_BP;
 RecentlyPlaced=/Game/Experiments/ConstraintTest.ConstraintTest;
 RecentlyPlaced=/Engine/EngineSky/BP_Sky_Sphere.BP_Sky_Sphere;
 RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
 RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
-RecentlyPlaced=/Game/ImprovedTank/Tank_BP.Tank_BP;
 RecentlyPlaced=/Game/MortarRobert/MortarRobert_BP.MortarRobert_BP;
 RecentlyPlaced=/Game/ImprovedMortar/improvedMortar_BP.improvedMortar_BP;
 RecentlyPlaced=/Game/Mortar/Mortar_BP.Mortar_BP;
