--- a/BattleTank/Saved/Config/Windows/Input.ini
+++ b/BattleTank/Saved/Config/Windows/Input.ini
@@ -1,7 +1,5 @@
 [/Script/Engine.Console]
-HistoryBuffer=t.m
-HistoryBuffer=t.MaxFPS 30
-HistoryBuffer=t.MaxFPS 10
-HistoryBuffer=t.MaxFPS 120
+HistoryBuffer=show col
+HistoryBuffer=show Collision
 
 
